Replace workflow_run with workflow_call

--- a/.github/workflows/sample_release.yml
+++ b/.github/workflows/sample_release.yml
@@ -1,9 +1,9 @@
-name: "Sample Text"
+name: "Sample Release"
 
 on:
   push:
-    tags-ignore:
-    - '**'
+    tags:
+      - '**'
   workflow_dispatch:
 
 jobs:
