workflow_call take 2

--- a/.github/workflows/sample_release.yml
+++ b/.github/workflows/sample_release.yml
@@ -3,7 +3,7 @@ name: "Sample Release"
 on:
   push:
     tags:
-      - '**'
+    - '**'
   workflow_dispatch:
 
 jobs:
@@ -11,4 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: echo '${{ toJSON(github) }}'
-    - uses: Jikoo/ActionsTest/.github/workflows/ci.yml@main
+  ci-run:
+    needs: debug
+    uses: Jikoo/ActionsTest/.github/workflows/ci.yml@main
