That's not how tags work, whoops

--- a/.github/workflows/sample_text.yml
+++ b/.github/workflows/sample_text.yml
@@ -2,12 +2,11 @@ name: "Sample Text"
 
 on:
   push:
-    tags-ignore:
-    - '**'
   workflow_dispatch:
 
 jobs:
   debug:
+    if: "!startsWith(github.ref, 'refs/tags/v')"
     runs-on: ubuntu-latest
     steps:
     - run: echo '${{ toJSON(github) }}'
