--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI
+name: "CI"
 
 on:
   workflow_call:
 
 jobs:
   debug:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
-    - run: echo '${{ toJSON(github) }}'
+    - run: "echo '${{ toJSON(github) }}'"
