--- a/.github/workflows/sample_release.yml
+++ b/.github/workflows/sample_release.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   debug:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
-    - run: echo '${{ toJSON(github) }}'
+    - run: "echo '${{ toJSON(github) }}'"
   ci-run:
-    needs: debug
-    uses: Jikoo/ActionsTest/.github/workflows/ci.yml@main
+    needs: "debug"
+    uses: "Jikoo/ActionsTest/.github/workflows/ci.yml@main"
