--- a/.github/workflows/sample_text.yml
+++ b/.github/workflows/sample_text.yml
@@ -7,9 +7,9 @@ on:
 jobs:
   debug:
     if: "!startsWith(github.ref, 'refs/tags/v')"
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
-    - run: echo '${{ toJSON(github) }}'
+    - run: "echo '${{ toJSON(github) }}'"
   ci-run:
-    needs: debug
-    uses: Jikoo/ActionsTest/.github/workflows/ci.yml@main
+    needs: "debug"
+    uses: "Jikoo/ActionsTest/.github/workflows/ci.yml@main"
