--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,4 +7,5 @@ jobs:
   debug:
     runs-on: "ubuntu-latest"
     steps:
-    - run: "echo '${{ toJSON(github) }}'"
+    - run: |-
+        echo '${{ toJSON(github) }}'
