--- a/.github/workflows/sample_text.yml
+++ b/.github/workflows/sample_text.yml
@@ -2,14 +2,18 @@ name: "Sample Text"
 
 on:
   push:
+    branches:
+    - '**'
+    tags-ignore:
+    - '**'
   workflow_dispatch:
 
 jobs:
   debug:
-    if: "!startsWith(github.ref, 'refs/tags/v')"
     runs-on: "ubuntu-latest"
     steps:
-    - run: "echo '${{ toJSON(github) }}'"
+    - run: |-
+        echo '${{ toJSON(github) }}'
   ci-run:
     needs: "debug"
     uses: "Jikoo/ActionsTest/.github/workflows/ci.yml@main"
